--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Vizitka Elišky Veselé</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:wght@700&family=Raleway:wght@300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:wght@400;700&family=Raleway:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="vizitka">
+	<img class="foto" src="images/foto.jpg" alt="Eliška Veselá">
+		
+		<h1>Eliška Veselá</h1>
+	<div class="text">
+		<p>Pracuje jako programátorka a učí neuronové sítě rozpoznávat obličeje a předměty. Vystudovala ČVUT v Praze a v 26 letech založila startup, kterým dnes úspěšně válcuje velké americké firmy.</p>
 
-	<img src="images/foto.jpg" alt="Eliška Veselá">
+		<p>I přes velké pracovní nasazení si každý den najde čas na svou dceru a dva psy. Ráda jezdí na koni, plave a chodí po horách. Její vysněná dovolená je strávit půl roku v kanadské divočině.</p>
 
-	<h1>Eliška Veselá</h1>
-
-	<p>Pracuje jako programátorka a učí neuronové sítě rozpoznávat obličeje a předměty. Vystudovala ČVUT v Praze a v 26 letech založila startup, kterým dnes úspěšně válcuje velké americké firmy.</p>
-
-	<p>I přes velké pracovní nasazení si každý den najde čas na svou dceru a dva psy. Ráda jezdí na koni, plave a chodí po horách. Její vysněná dovolená je strávit půl roku v kanadské divočině.</p>
-
-	<a href="https://twitter.com/">Twitter</a>
-	<a href="https://www.facebook.com/">Facebook</a>
-
+		<a href="https://twitter.com/">Twitter</a>
+		<a href="https://www.facebook.com/">Facebook</a>
+	</div>
+</div>
 </body>
 </html>
